cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cluster.bitsnake.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 443
          - path: /multiplayer
            pathType: Prefix
            backend:
              service:
                name: multiplayer-service
                port:
                  number: 4000
  tls:
    - hosts:
        - cluster.bitsnake.win
      secretName: tls-secret-multiplayer
